--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,6 @@ build-backend = "pdm.pep517.api"
 
 [project]
 name = "biomatx"
-version = {use_scm = true}
 description = "Python API for managing the Biomatx home automation system"
 authors = [
     {name = "Damien Merenne", email = "dam@cosinux.org"}
@@ -28,6 +27,7 @@ Homepage = "https://github.com/canatella/pybiomatx"
 [project.optional-dependencies]
 [tool.pdm]
 package-dir = "src"
+version = { source = "scm" }
 
 [tool.pdm.dev-dependencies]
 dev = [
