--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,12 +31,12 @@ version = { source = "scm" }
 
 [tool.pdm.dev-dependencies]
 dev = [
-    "pytest~=6.1",
-    "towncrier~=19.2",
-    "parver~=0.3",
-    "pytest-asyncio~=0.15",
-    "black~=21.10b0",
-    "flake8~=4.0",
+    "pytest",
+    "towncrier",
+    "parver",
+    "pytest-asyncio",
+    "black<24.4.0",
+    "flake8",
 ]
 
 [tool.pdm.scripts]
